--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
+
+@theme{
+    --breakpoint-xxs: 320px;
+    --breakpoint-xs: 400px;
+}
+
+body {
+    font-family: "Noto Sans SC", "Noto Sans", sans-serif;
+}
